# sivee.pro

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  adaptTemplates.md  alembic.ini  app.py  build.py  consignes.md  data.yml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  lint.sh  michel.tex  migrate.sh  nginx.conf  pyproject.toml  run.sh  template.tex  template_stephane.tex  test.sh  test_e2e.sh
alembic/: env.py
backend/: .gitignore  README.md  build.py  data.yml  pyproject.toml  translations.py
backend/alembic/versions/: 1ff2366bc5ce_initial_migration_create_users_and_.py  2a3b4c5d6e7f_add_google_oauth_support.py  3b4c5d6e7f8g_add_guest_account_support.py  4c5d6e7f8g9h_add_premium_and_download_limits.py  (+1 more)
backend/api/: __init__.py  resumes.py
backend/auth/: __init__.py  schemas.py  security.py
backend/core/: DataManager.py  LatexRenderer.py  ResumeBuilder.py  ResumeConfig.py  StorageManager.py
backend/database/: __init__.py  db_config.py  models.py
backend/templates/: double.tex  double_large.tex  harvard.tex  harvard_compact.tex  harvard_large.tex  michel.tex  michel_compact.tex  michel_large.tex  stephane_compact.tex
backend/tests/: conftest.py  test_app_smoke.py  test_auth_dependencies.py  test_auth_edge_cases.py  test_auth_routes.py  test_convert_section_items.py  test_data_manager.py  test_data_manager_extra.py  test_email.py  test_feedback.py  test_generate_endpoint.py  test_google_oauth.py  test_guest_upgrade_schema.py  test_import_endpoints.py  test_latex_renderer.py  test_oauth_helpers.py  test_password_reset.py  test_pdf_compiler.py  test_pdf_compiler_v2.py  test_pydantic_models.py  test_pydantic_models_v2.py  test_resume_api_convert.py  test_resume_builder.py  test_resume_config.py  test_resume_max_limit.py  test_resume_routes.py  test_resume_routes_extra.py  test_schemas.py  test_security.py  test_storage_manager.py  test_translations.py  test_translations_extra.py
(+247 files in other folders)
